[package]
name = "saddle-procgen-noise"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-procgen-noise"
license = "MIT-0"
description = "Deterministic noise generation utilities for procedural workflows in Bevy"

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }

[dev-dependencies]
proptest = "1"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
needless_doctest_main = "allow"
