[package]
name = "saddle-procgen-noise"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-procgen-noise"
license = "MIT-0"
description = "Deterministic noise generation utilities for procedural workflows in Bevy"

[features]
default = ["asset"]
asset = ["dep:ron", "dep:serde_json"]

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
ron = { version = "0.9", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
needless_doctest_main = "allow"
