[package]
name = "saddle-procgen-noise-example-seamless"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = "0.18"
saddle-procgen-noise = { path = "../.." }
saddle-procgen-noise-example-common = { path = "../common" }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
