[package]
name = "saddle-procgen-noise-example-terrain"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-procgen-noise = { path = "../.." }
saddle-procgen-noise-example-common = { path = "../common" }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
